      (Closes: #809651).
  * checks/usrmerge.{desc,pm}:
    + [BR] Add usrmerge test from Marco d'Itri.  (Closes: #767754).
  * checks/watch-file.{desc,pm}:
    + [BR] Apply patch from Chris Lamb <lamby@debian.org>,
      warn if debian/watch uses deprecated
      githubredir.debian.net scraper (Closes: #803106).

  * data/spelling/corrections*:
    + [JW] Add more corrections.

 -- Niels Thykier <niels@thykier.net>  Sun, 27 Dec 2015 09:43:24 +0000

lintian (2.5.39.1) unstable; urgency=medium

  * checks/menu-format.desc:
    + [NT] Clarify how to handle a command listed both in a menu file
      and a desktop file.  Thanks to Jörg Frings-Fürst for reporting.
      (Closes: #806387)

  * data/binaries/embedded-libs:
    + [JW] Fix typo in the string used for detecting copies of OpenJPEG.
      (But continue to recognize the misspelled variant, which might be
      still present in some copies.)
  * data/fields/udeb-fields:
    + [NT] Add Auto-Built-Package and Build-Ids fields.  Thanks to
      Guillem Jover for the report.  (Closes: #808566)
  * data/scripts/interpreters:
    + [JW] Add perl6-m as a known interpreter.  Thanks to Dominique Dumont
      for the bug report.  (Closes: #809057)
  * data/spelling/corrections:
    + [JW] Add more corrections.

  * man/lintian.pod.in:
    + [NT,JW] Document clarify that "-L +=<value>" is valid.
      (Closes: #802729)
    + [NT] Attempt to document --display-level a bit more extensively.
      Thanks to Matt Zagrabelny for the report.  (Closes: #802725)
    + [NT] Clarify what --default-display-level does and why one might
      want to use it.

  * private/refresh-ftp-master-tags:
    + [JW] Use HTTPS for the ftp-master.debian.org URL.

 -- Niels Thykier <niels@thykier.net>  Sun, 27 Dec 2015 09:37:34 +0000

lintian (2.5.39) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - dh-exec-useless-usage
      - systemd-service-alias-without-extension

  * checks/binaries.pm: