@@ -31,6 +31,10 @@ lintian (2.5.40) UNRELEASED; urgency=medium
   * data/spelling/corrections*:
     + [JW] Add more corrections.
 
+  * lib/Lintian/Check.pm:
+    + [JW] Remove work-around for Email::Valid bug (#663663), which is now
+      fixed even in oldstable.
+
  -- Niels Thykier <niels@thykier.net>  Sun, 27 Dec 2015 09:43:24 +0000
 
 lintian (2.5.39.1) unstable; urgency=medium
